--- a/NEW-TARIFFS/index-ru.html
+++ b/NEW-TARIFFS/index-ru.html
@@ -503,7 +503,7 @@
 									<a href="https://www.pulscen.ru/about/promo/packets_ua" class="linking tariff-description-text">прайс Украины</a>
 								</div>
 								<div class="tariff-description-text">Вы можете усилить тарифный план "Старт" дополнительными услугами.</div>
-								<div class="tariff-description-text" style="color: #5e7491">*Размещение более 10 000 товаров требуется дополнительного согласования</div>
+								<div class="tariff-description-text" style="color: #5e7491">*Размещение более 10 000 товаров требует дополнительного согласования.</div>
 							</div>
 						</div>
 						<!-- <div class="new-tariffs-h1-dop">Усильте размещение дополнительными услугами</div> -->
@@ -743,7 +743,7 @@
 								</div>
 
 								<div class="tariff-description-text">цены указаны без НДС</div>
-								<div class="tariff-description-text" style="color: #5e7491">*Размещение более 10 000 товаров требуется дополнительного согласования</div>
+								<div class="tariff-description-text" style="color: #5e7491">*Размещение более 10 000 товаров требует дополнительного согласования.</div>
 							</div>
 							<div class="tariff-price">
 								<div style="margin-left: 60px; margin-top: 20px; border-bottom: 2px solid #068ad5; font-size: 18px; color: #068ad5" onclick="ym(49709308,'reachGoal','Event_1858_about-packets')"> {company:company_new(Добавить компанию и начать продажи)} </div>
@@ -1077,7 +1077,7 @@
 									</div>
 								</div>
 								<div class="tariff-description-text">цены указаны без НДС</div>
-								<div class="tariff-description-text" style="color: #5e7491">*Размещение более 10 000 товаров требуется дополнительного согласования</div>
+								<div class="tariff-description-text" style="color: #5e7491">*Размещение более 10 000 товаров требует дополнительного согласования.</div>
 							</div>
 							<div class="tariff-price">
 								<div style="margin-left: 60px; margin-top: 20px; border-bottom: 2px solid #068ad5; font-size: 18px; color: #068ad5" onclick="ym(49709308,'reachGoal','Event_1858_about-packets')"> {company:company_new(Добавить компанию и начать продажи)} </div>
